assets/alertmanager-user-workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: |-
      Expose the user-defined Alertmanager web server within the cluster on the following ports:
      * Port 9095 provides access to the Alertmanager endpoints. Granting access requires binding a user to the `monitoring-alertmanager-api-reader` role (for read-only operations) or `monitoring-alertmanager-api-writer` role in the `openshift-user-workload-monitoring` project.
      * Port 9092 provides access to the Alertmanager endpoints restricted to a given project. Granting access requires binding a user to the `monitoring-rules-edit` cluster role or `monitoring-edit` cluster role in the project.
      * Port 9097 provides access to the `/metrics` endpoint only. This port is for internal use, and no other usage is guaranteed.
    service.beta.openshift.io/serving-cert-secret-name: alertmanager-user-workload-tls
  labels:
    app.kubernetes.io/component: alert-router
    app.kubernetes.io/instance: user-workload
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: openshift-monitoring
    app.kubernetes.io/version: 0.34.1
  name: alertmanager-user-workload
  namespace: openshift-user-workload-monitoring
spec:
  ports:
  - name: web
    port: 9095
    targetPort: web
  - name: tenancy
    port: 9092
    targetPort: tenancy
  - name: metrics
    port: 9097
    targetPort: metrics
  selector:
    app.kubernetes.io/component: alert-router
    app.kubernetes.io/instance: user-workload
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: openshift-monitoring
  sessionAffinity: ClientIP
  type: ClusterIP
