assets/alertmanager-user-workload/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: alertmanager-user-workload
  namespace: openshift-user-workload-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 9092
      protocol: TCP
    - port: 9095
      protocol: TCP
    - port: 9097
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: alertmanager
          app.kubernetes.io/part-of: openshift-monitoring
    ports:
    - port: 9094
      protocol: TCP
    - port: 9094
      protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/part-of: openshift-monitoring
  policyTypes:
  - Ingress
  - Egress
